--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,23 @@
 		"target": "es6",
 		"outDir": "out",
 		"lib": [
-			"es6"
+			"es7"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
+		"allowJs": true,
+		// "strictPropertyInitialization": false,
 		/* Strict Type-Checking Option */
-		"strict": true,   /* enable all strict type-checking options */
+		// "strict": true,   /* enable all strict type-checking options */
 		/* Additional Checks */
-		"noUnusedLocals": true /* Report errors on unused locals. */
+		// "noUnusedLocals": true /* Report errors on unused locals. */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
+	"include": [
+		"src/**/*"
+	],
 	"exclude": [
 		"node_modules",
 		".vscode-test"
