--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
 		"name": "vscode-ant-design-vue-helper",
 		"displayName": "Ant Design Vue helper",
 		"description": "A vscode extension for Ant-Design-Vue",
-		"version": "0.1.0",
+		"version": "0.1.1",
 		"publisher": "ant-design-vue",
 		"engines": {
 				"vscode": "^1.30.0"
 		},
+		"icon": "./antdv.png",
 		"categories": [
-				"Other"
+			"Snippets",
+			"Other"
 		],
 		"activationEvents": [
 				"onLanguage:html",
