--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
 		"name": "vscode-ant-design-vue-helper",
 		"displayName": "Ant Design Vue helper",
 		"description": "A vscode extension for Ant-Design-Vue",
-		"version": "1.0.1",
+		"version": "1.0.2",
 		"publisher": "ant-design-vue",
+		"repository": {
+			"type": "git",
+			"url": "https://github.com/vueComponent/ant-design-vue-helper"
+		},
 		"engines": {
 				"vscode": "^1.30.0"
 		},
@@ -27,7 +31,7 @@
 				"keybindings": [
 						{
 								"command": "antdv-helper.search",
-								"key": "ctrl+shift+z",
+								"key": "shift+cmd+i",
 								"when": "editorTextFocus"
 						}
 				],
