--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 		"name": "vscode-ant-design-vue-helper",
 		"displayName": "Ant Design Vue helper",
 		"description": "A vscode extension for Ant-Design-Vue",
-		"version": "1.0.3",
+		"version": "1.0.4",
 		"publisher": "ant-design-vue",
 		"repository": {
 			"type": "git",
@@ -53,7 +53,11 @@
 								"antdv-helper.quotes": {
 										"type": "string",
 										"default": "double"
-								}
+								},
+								"antdv-helper.link-url": {
+									"type": "string",
+									"default": "https://ant-design-vue.gitee.io/components/"
+							}
 						}
 				}
 		},
