--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "clean": "gulp clean:all",
     "compile": "gulp compile",
     "watch": "tsc -watch -p ./",
-    "test": "yarn run compile & node ./out/test/index.js"
+    "test": "yarn run compile & node ./out/test/index.js",
+    "read": "gulp read"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
@@ -83,7 +84,8 @@
     "ts-node": "^8.10.1",
     "tslint": "^5.18.0",
     "typescript": "^3.3.1",
-    "vscode-test": "^1.3.0"
+    "vscode-test": "^1.3.0",
+    "ant-design-vue": "^1.5.5"
   },
   "dependencies": {
     "pretty": "^2.0.0",
