--- a/package.json
+++ b/package.json
@@ -73,20 +73,21 @@
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/gulp": "^4.0.6",
+    "@types/lodash": "^4.14.155",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.12.21",
     "@types/vscode": "^1.45.0",
+    "ant-design-vue": "^1.6.2",
     "glob": "^7.1.4",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-typescript": "^5.0.1",
+    "lodash": "^4.17.5",
     "mocha": "^6.1.4",
     "ts-node": "^8.10.1",
     "tslint": "^5.18.0",
     "typescript": "^3.3.1",
-    "vscode-test": "^1.3.0",
-    "lodash": "^4.17.5",
-    "ant-design-vue": "^1.6.2"
+    "vscode-test": "^1.3.0"
   },
   "dependencies": {
     "pretty": "^2.0.0",
